--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -16,17 +16,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
       - name: Run OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@main
         with:
           project: 'php-project'
-          scan: './'
+          path: './'
           format: 'ALL'
           out: 'dependency-check-report'
 
