--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -1,9 +1,7 @@
-name: DevSecOps Pipeline
+name: DIWA SCA Pipeline
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
     branches: [ "main" ]
   workflow_dispatch:
 
@@ -19,7 +17,7 @@ jobs:
       - name: Run OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@main
         with:
-          project: 'php-project'
+          project: 'DIWA CI/CD'
           path: './'
           format: 'ALL'
           out: 'dependency-check-report'
