--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,6 @@ sonar.projectName=diwa_cicd
 sonar.sources=.
 sonar.language=php
 sonar.sourceEncoding=UTF-8
+
+sonar.host.url=https://sonarcloud.io
+sonar.login=${env.SONAR_TOKEN}
