--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -1,4 +1,4 @@
-name: Secret Scan with truffleHog
+name: Secret Scan with truffleHog CLI
 
 on:
   workflow_dispatch:
@@ -7,10 +7,16 @@ jobs:
   trufflehog-scan:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Python and pip
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install truffleHog
+        run: pip install truffleHog
 
       - name: Run truffleHog scan
-        uses: trufflesecurity/trufflehog-action@v1
-        with:
-          directory: '.'
-          failOnSecrets: true
+        run: trufflehog filesystem . --exit-zero
