--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -1,7 +1,10 @@
 name: Secret Scan with truffleHog CLI
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   trufflehog-scan:
@@ -10,7 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install Python and pip
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
@@ -19,4 +22,4 @@ jobs:
         run: pip install truffleHog
 
       - name: Run truffleHog scan
-        run: trufflehog filesystem . --exit-zero
+        run: trufflehog --repo-path . || true
