--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -19,10 +19,4 @@ jobs:
         run: pip install truffleHog
 
       - name: Run truffleHog scan and save output
-        run: trufflehog --repo-path . --json > trufflehog-results.json || true
-
-      - name: Upload truffleHog results artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: trufflehog-results
-          path: trufflehog-results.json
+        run: trufflehog --repo-path . || true
