--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install truffleHog
-        run: pip install truffleHog
+      - name: Install truffleHogv3
+        run: pip install trufflehogv3
 
       - name: Run truffleHog scan and save output
         run: trufflehog --repo-path . || true
