--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install truffleHog v3 from GitHub
-        run: pip install git+https://github.com/trufflesecurity/trufflehog.git@v3
+      - name: Install truffleHog v3 (trufflehog3)
+        run: pip install trufflehog3
 
 
       - name: Run truffleHog scan and save output
