--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -1,4 +1,4 @@
-name: Secret Scan with truffleHog CLI
+name: Secret Scan with truffleHog
 
 on:
   workflow_dispatch:
@@ -10,19 +10,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+      - name: Download trufflehog CLI
+        run: |
+          curl -L https://github.com/trufflesecurity/trufflehog/releases/latest/download/trufflehog-linux-amd64 -o trufflehog
+          chmod +x trufflehog
 
-      - name: Install truffleHog v3 (trufflehog3)
-        run: pip install trufflehog3
+      - name: Run trufflehog scan
+        run: ./trufflehog filesystem . --json > trufflehog-results.json || true
 
-      - name: Run truffleHog3 scan and save output
-        run: trufflehog3 filesystem . --json > trufflehog-results.json || true
-
-
-      - name: Upload truffleHog3 results artifact
+      - name: Upload results
         uses: actions/upload-artifact@v4
         with:
           name: trufflehog-results
