--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -8,10 +8,12 @@ on:
 
 jobs:
   gitleaks-scan:
+    name: Scan for Secrets with Gitleaks
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Install Gitleaks
         run: |
@@ -24,9 +26,6 @@ jobs:
           gitleaks detect --source . \
                           --report-path gitleaks-report.json \
                           --report-format json || true
-          if [ ! -f gitleaks-report.json ]; then
-            echo '[]' > gitleaks-report.json
-          fi
 
       - name: Upload Gitleaks Report
         uses: actions/upload-artifact@v4
