--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -1,7 +1,10 @@
 name: DAST Scan
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   dast-scan:
@@ -10,33 +13,31 @@ jobs:
     services:
       docker:
         image: docker:dind
+        privileged: true
         options: --dns 8.8.8.8
         ports:
-          - 8080:80
+          - 8080:8080
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
+      - name: Build app image
         run: docker build -t diwa .
 
       - name: Run app container
         run: |
-          docker run -d --name diwa -p 8080:80 diwa
-          sleep 5
+          docker run -d --name diwa -p 8080:8080 diwa
+          sleep 10  # daj czas na start
 
-      - name: Verify app is running
+      - name: Check app
         run: curl --fail http://localhost:8080
 
-      # Możesz tu dodać np. OWASP ZAP lub inne narzędzie DAST
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.7.0
         with:
           target: 'http://localhost:8080'
-
-      - name: Stop containers
-        run: docker stop php-app
+          cmd_options: '-a'
