--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -12,28 +12,32 @@ jobs:
         image: docker:dind
         options: --dns 8.8.8.8
         ports:
-          - 8080:8080
+          - 8080:80
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
+      - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
-      - name: Build app image
+      - name: Build Docker image
         run: docker build -t diwa .
 
       - name: Run app container
         run: |
-          docker run -d --name diwa -p 8080:8080 diwa
-          sleep 10  # daj czas na start
+          docker run -d --name diwa -p 8080:80 diwa
+          sleep 5
 
-      - name: Check app
+      - name: Verify app is running
         run: curl --fail http://localhost:8080
 
+      # Możesz tu dodać np. OWASP ZAP lub inne narzędzie DAST
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.7.0
         with:
           target: 'http://localhost:8080'
           cmd_options: '-a'
+
+      - name: Stop containers
+        run: docker stop diwa
