--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -31,5 +31,12 @@ jobs:
           target: 'http://localhost:8080'
           cmd_options: '-a'
 
+      - name: Upload ZAP Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap_scan_report
+          path: path/to/zap/report.html
+
+
       - name: Stop container
         run: docker stop diwa
