--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: zap_scan_report
-          path: path/to/zap/report.html
+          path: zap/report.html
 
 
       - name: Stop container
