--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
         with:
-          name: zap_scan_report
+          name: zap-scan-report
           path: zap/report.html
 
 
