--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
         with:
-          name: zap-scan-report
-          path: zap/report.html
+          name: zapreport
+          path: zap/zapreport.html
 
 
       - name: Stop container
