--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -30,9 +30,10 @@ jobs:
         with:
           target: 'http://localhost:8080'
           cmd_options: '-a'
+          failAction: 'warn'
 
       - name: Upload ZAP Report
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v4
         with:
           name: zapreport
           path: zap/zapreport.html
