--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -31,7 +31,7 @@ jobs:
           target: 'http://localhost:8080'
           cmd_options: '-a'
           fail_action: 'warn'
-          artifact_name: 'zap-scan'
+          artifact_name: 'zapscan'
 
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
