--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -31,7 +31,7 @@ jobs:
           target: 'http://localhost:8080'
           cmd_options: '-a'
           fail_action: false
-          artifact_name: 'zapscan'
+          artifact_name: 'zap'
 
       - name: Stop container
         run: docker stop diwa
