--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -32,6 +32,9 @@ jobs:
           cmd_options: '-a'
           allow_issue_writing: true
           fail_action: false
+          issue_title: 'ZAP Scan Baseline Report'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Stop container
         run: docker stop diwa
