--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -25,17 +25,13 @@ jobs:
       - name: Verify app is running
         run: curl --fail http://localhost:8080
 
-      - name: Run OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.12.0
-        with:
-          target: 'http://localhost:8080'
-          cmd_options: '-a'
-          allow_issue_writing: true
-          issue_title: 'ZAP Scan Baseline Report'
-          fail_action: false
-          artifact_name: ''
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run ZAP CLI and post to issue
+        run: |
+          docker run --rm -v $(pwd):/zap/wrk owasp/zap2docker-stable zap-baseline.py \
+            -t http://localhost:8080 \
+            -J zap_report.json \
+            -r zap_report.html
+          cat zap_report.json
 
       - name: Stop container
         run: docker stop diwa
