--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Docker
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
@@ -25,10 +25,22 @@ jobs:
       - name: Verify app is running
         run: curl --fail http://localhost:8080
 
-      - name: Run OWASP ZAP Baseline Scan (no artifact)
-        run: |
-          docker run --rm -v $(pwd):/zap/wrk ghcr.io/zaproxy/zap-baseline:latest \
-          -t http://localhost:8080 -J zap_report.json -r zap_report.html
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Stop container
+      - name: Run OWASP ZAP Baseline Scan
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/zap/wrk ghcr.io/zaproxy/zap-baseline:latest -t http://host.docker.internal:8080
+
+      - name: Upload ZAP Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: zap-baseline-report
+          path: report.html
+
+      - name: Stop app container
         run: docker stop diwa
