--- a/app/.htaccess
+++ b/app/.htaccess
@@ -7,6 +7,12 @@
 
 <IfModule mod_headers.c>
   <FilesMatch "\.(css|txt|xml)$">
-    Header set Cache-Control "public, max-age=2592000"  # 30 dni
+    Header set Cache-Control "public, max-age=2592000"
   </FilesMatch>
+
+  Header always set X-Frame-Options "SAMEORIGIN"
+  Header unset Server
+  Header unset ETag
 </IfModule>
+
+FileETag None
