--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,3 +1,9 @@
+# Ukryj wersje serwera i PHP
+ServerTokens Prod
+ServerSignature Off
+Header unset X-Powered-By
+
+# Cache control dla statycznych plików
 <IfModule mod_expires.c>
   ExpiresActive On
   ExpiresByType text/css "access plus 30 days"
@@ -11,7 +17,6 @@
   </FilesMatch>
 
   Header always set X-Frame-Options "SAMEORIGIN"
-  Header unset Server
   Header unset ETag
 </IfModule>
 
