--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,9 +1,3 @@
-# Ukryj wersje serwera i PHP
-ServerTokens Prod
-ServerSignature Off
-Header unset X-Powered-By
-
-# Cache control dla statycznych plików
 <IfModule mod_expires.c>
   ExpiresActive On
   ExpiresByType text/css "access plus 30 days"
@@ -17,6 +11,7 @@ Header unset X-Powered-By
   </FilesMatch>
 
   Header always set X-Frame-Options "SAMEORIGIN"
+  Header unset Server
   Header unset ETag
 </IfModule>
 
