--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -22,12 +22,13 @@ jobs:
           wget https://github.com/aquasecurity/trivy/releases/download/${TRIVY_VERSION}/trivy_${TRIVY_VERSION#v}_Linux-64bit.deb
           sudo dpkg -i trivy_${TRIVY_VERSION#v}_Linux-64bit.deb
 
-      - name: Run Trivy vulnerability scan
+      - name: Run Trivy vulnerability scan (HTML report)
         run: |
-          trivy image --format json -o trivy-report.json diwa
+          trivy image --format html -o trivy-report.html diwa
 
-      - name: Upload Trivy report
+      - name: Upload Trivy HTML report
         uses: actions/upload-artifact@v4
         with:
-          name: trivy-report
-          path: trivy-report.json
+          name: trivy-html-report
+          path: trivy-report.html
+
